--- a/20240614_keio.ipynb
+++ b/20240614_keio.ipynb
@@ -438,28 +438,10 @@
     "0.707 \\\\\\\n",
     "-0.707\n",
     "\\end{pmatrix} \n",
-    "=\\frac{1}{\\sqrt{2}}（|0\\rangle-|1\\rangle)$\n",
+    "=\\frac{1}{\\sqrt{2}}(|0\\rangle-|1\\rangle)$\n",
     "\n",
     "\n",
     "$|1\\rangle$に$H$ゲートを実行した結果、$|0\\rangle$と$|1\\rangle$の均等な重ね合わせ状態になりますが、$|1\\rangle$の符号がマイナスになります。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$|0\\rangle \\langle 0|= \n",
-    "\\begin{bmatrix}\n",
-    "1 & 0\n",
-    "\\end{bmatrix}\n",
-    "\\begin{bmatrix}\n",
-    "1 \\\\\n",
-    "0\n",
-    "\\end{bmatrix}\n",
-    "=\\begin{pmatrix}\n",
-    "1 & 0 \\\\\n",
-    "0 & 0 \\\\\n",
-    "\\end{pmatrix}$$"
    ]
   },
   {
