--- a/20240614_keio.ipynb
+++ b/20240614_keio.ipynb
@@ -452,9 +452,9 @@
     "= |0\\rangle \\langle 1|+|1\\rangle \\langle 0|$$\n",
     "$$Y = \\begin{pmatrix}\n",
     "0 & -i \\\\\n",
-    "-i & 0 \\\\\n",
+    "i & 0 \\\\\n",
     "\\end{pmatrix}\n",
-    "= -1|0\\rangle \\langle 1|+i|1\\rangle \\langle 0|$$\n",
+    "= -i|0\\rangle \\langle 1|+i|1\\rangle \\langle 0|$$\n",
     "$$Z = \\begin{pmatrix}\n",
     "1 & 0 \\\\\n",
     "0 & -1 \\\\\n",
@@ -540,7 +540,9 @@
     "$$ R_z(\\theta) = e^{-i\\theta Z/2} = cos\\frac{\\theta}{2}I - i sin \\frac{\\theta}{2}Z = \\begin{bmatrix}\n",
     "e^{-i\\theta /2} &  0 \\\\\n",
     "0 & e^{i\\theta /2} \\\\\n",
-    "\\end{bmatrix}$$"
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "こちらの[ブロッホ球のアプリ](https://javafxpert.github.io/grok-bloch/)も参考になります。"
    ]
   },
   {
@@ -1537,7 +1539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
