--- a/20240614_keio.ipynb
+++ b/20240614_keio.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "量子ビットの状態は、$|0\\rangle$と$|1\\rangle$ の重ね合わせの状態で表します。任意の量子ビットは以下のように表します。\n",
     "\n",
-    "$$\\psi =\\alpha|0\\rangle+ \\beta|1\\rangle$$ \n",
+    "$$|\\psi\\rangle =\\alpha|0\\rangle+ \\beta|1\\rangle$$ \n",
     "\n",
     "ここで $\\alpha$ と $\\beta$ は、 $|\\alpha|^2+|\\beta|^2=1$ を満たす複素数で、確率振幅と呼ばれます。\n",
     "\n",
@@ -110,7 +110,10 @@
     "\\beta\n",
     "\\end{bmatrix}$$\n",
     "\n",
-    "とも表すことができ、これから量子ビットの状態は、$|0\\rangle$と$|1\\rangle$を正規直交基底とする2次元の複素内積空間の単位ベクトルであることがわかります。その大きさは1に規格化されています。\n",
+    "とも表すことができ、$|\\psi\\rangle =\\begin{bmatrix}\n",
+    "\\alpha \\\\\n",
+    "\\beta\n",
+    "\\end{bmatrix}$ は状態ベクトルとも呼びます。つまり、量子ビットの状態は、$|0\\rangle$と$|1\\rangle$を正規直交基底とする2次元の複素内積空間の単位ベクトルであることがわかります。その大きさは1に規格化されています。\n",
     "$$\\langle\\psi|\\psi\\rangle = \\begin{bmatrix}\n",
     "\\alpha^* & \\beta^*\n",
     "\\end{bmatrix}\n",
@@ -118,11 +121,16 @@
     "\\alpha \\\\\n",
     "\\beta\n",
     "\\end{bmatrix} = 1$$\n",
-    "\n",
-    "$|\\psi\\rangle =\\begin{bmatrix}\n",
-    "\\alpha \\\\\n",
-    "\\beta\n",
-    "\\end{bmatrix}$ は状態ベクトルとも呼びます。"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "代表的な量子演算に、XゲートとHゲートがあります。Xゲートは0と1を反転する演算、Hゲートは重ね合わせを作る演算です。\n",
+    "$$X|0\\rangle = |1\\rangle$$\n",
+    "$$H|0\\rangle= \\frac{1}{\\sqrt{2}}|0\\rangle+\\frac{1}{\\sqrt{2}}|1\\rangle$$"
    ]
   },
   {
@@ -349,7 +357,7 @@
     "0.707 \\\\\\\n",
     "0.707\n",
     "\\end{pmatrix} \n",
-    "=\\frac{1}{\\sqrt{2}}（|0\\rangle+|1\\rangle)$ です。\n",
+    "=\\frac{1}{\\sqrt{2}}(|0\\rangle+|1\\rangle) = |+\\rangle$ です。\n",
     "\n",
     "\n",
     "\n",
@@ -423,7 +431,7 @@
     "0.707 \\\\\\\n",
     "-0.707\n",
     "\\end{pmatrix} \n",
-    "=\\frac{1}{\\sqrt{2}}(|0\\rangle-|1\\rangle)$\n",
+    "=\\frac{1}{\\sqrt{2}}(|0\\rangle-|1\\rangle) = |-\\rangle$\n",
     "\n",
     "\n",
     "$|1\\rangle$に$H$ゲートを実行した結果、$|0\\rangle$と$|1\\rangle$の均等な重ね合わせ状態になりますが、$|1\\rangle$の符号がマイナスになります。"
@@ -520,7 +528,7 @@
     "\\end{bmatrix},\\quad\n",
     "S = \\begin{bmatrix}\n",
     "1 & 0 \\\\\n",
-    "0 & -i \\\\\n",
+    "0 & i \\\\\n",
     "\\end{bmatrix}, \\quad\n",
     "T = \\begin{bmatrix}\n",
     "1 & 0 \\\\\n",
@@ -1093,8 +1101,7 @@
     "\n",
     "この2つの状態のテンソル積は\n",
     "$$|\\psi\\rangle _A\\otimes |\\psi\\rangle _B = a_0 b_0|00\\rangle+a_0 b_1|01\\rangle+a_1 b_0|10\\rangle+a_1 b_1|11\\rangle$$\n",
-    "となりますが、これを満たす $a_0, a_1, b_0, b_1$ はありません。\n",
-    "\n",
+    "となりますが、これを満たす $a_0, a_1, b_0, b_1$ はありません。つまり、エンタングルした状態は、個別の量子状態のテンソル積では表せないことがわかります。<br>\n",
     "では、演習2で実際にこの量子状態を作ってみましょう。<br>\n"
    ]
   },
@@ -1123,7 +1130,7 @@
    "outputs": [],
    "source": [
     "# 2量子ビット回路の用意\n",
-    "qc = QuantumCircuit(2,2) ##コードを記入します##\n",
+    "qc = ##コードを記入します##\n",
     "\n",
     "# 2量子ビットのエンタングルメント回路の作成\n",
     "qc.##コードを記入します##\n",
@@ -1319,7 +1326,7 @@
    "outputs": [],
    "source": [
     "# 2量子ビット回路の用意\n",
-    "qc = QuantumCircuit(2, 2)##コードを記入します##\n",
+    "##コードを記入します##\n",
     "\n",
     "# 回路の作成\n",
     "##コードを記入します##\n",
