--- a/20250120/20250120_2_qiskit.ipynb
+++ b/20250120/20250120_2_qiskit.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Qiskit入門 解答例\n",
+    "# Qiskit入門\n",
     "\n",
     "Kifumi Numata, IBM Quantum (Jan 20, 2025)"
    ]
