--- a/20250120/20250120_2_qiskit.ipynb
+++ b/20250120/20250120_2_qiskit.ipynb
@@ -454,7 +454,7 @@
     "# シミュレーターで実験\n",
     "backend = AerSimulator()\n",
     "sampler = SamplerV2(backend)\n",
-    "job = sampler.run([qc])\n",
+    "job = sampler.run([qc], shots=1024)\n",
     "result = job.result()\n",
     "\n",
     "#  測定された回数を表示\n",
