--- a/20250120/20250120_3_qml.ipynb
+++ b/20250120/20250120_3_qml.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "### Step 2:  量子実行のための問題の最適化\n",
     "\n",
-    "Aer Simulatorをバックエンドとして使い、上記の回路を最適化します。今回は、実機のバックエンドを使用しませんが、transpiler が ZZFeatureMap を認識できないため、回路をトランスパイルする必要があります。"
+    "Aer Simulatorをバックエンドとして使い、上記の回路を最適化します。今回は、実機のバックエンドを使用しませんが、sampler が ZZFeatureMap を認識できないため、回路をトランスパイルする必要があります。"
    ]
   },
   {
