--- a/20250120/20250120_3_qml.ipynb
+++ b/20250120/20250120_3_qml.ipynb
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_shots = 10000\n",
+    "num_shots = 1000\n",
     "\n",
     "backend = AerSimulator()\n",
     "sampler = Sampler(mode=backend)\n",
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "このデータセットには、合計360個のデータが含まれています。各データポイントは、8×8の数字の画像で、配列になっていて、各要素は0（白）から16（黒）までの整数です。古典的な分類アルゴリズムの際と同様に、データセットを学習用（40個）とテスト用（10個）のサンプルに分割し、正規化する必要があります。このデータセットを量子分類アルゴリズムに用いるために、範囲を-1から1の間にスケーリングし、次元を使用する量子ビット数（今回は4）に縮小します。"
+    "このデータセットには、合計360個のデータが含まれています。各データポイントは、8×8の数字の画像で、配列になっていて、各要素は0（白）から16（黒）までの整数です。古典的な分類アルゴリズムの際と同様に、データセットを学習用（25個）とテスト用（10個）のサンプルに分割し、正規化する必要があります。このデータセットを量子分類アルゴリズムに用いるために、範囲を-1から1の間にスケーリングし、次元を使用する量子ビット数（今回は4）に縮小します。"
    ]
   },
   {
@@ -558,8 +558,8 @@
     "sample_train = minmax_scale.transform(sample_train)\n",
     "sample_test = minmax_scale.transform(sample_test)\n",
     "\n",
-    "# 学習用40個とテスト用10個を選択\n",
-    "train_size = 40\n",
+    "# 学習用25個とテスト用10個を選択\n",
+    "train_size = 25\n",
     "X_train = sample_train[:train_size]\n",
     "train_labels = labels_train[:train_size]\n",
     "\n",
@@ -584,7 +584,7 @@
    "source": [
     "### 演習 1: \n",
     "\n",
-    "[ZFeatureMap](https://docs.quantum.ibm.com/api/qiskit/qiskit.circuit.library.ZFeatureMap)を使って特徴量マップの回路を作ってください。ZFeatureMapの引数には、`feature_dimension`(量子ビット数)と`reps`(繰り返し数)のみ指定すれば大丈夫です。"
+    "ZZFeamtureMapを使って特徴量マップの回路を作ってください。(ZZFeaturemapはこのNotebookの最初で使っています。)"
    ]
   },
   {
@@ -649,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_shots = 10000\n",
+    "num_shots = 1000\n",
     "\n",
     "backend = AerSimulator()\n",
     "sampler = Sampler(mode=backend)\n",
