add instruction for qBraid

--- a/20250120/20250120_2_qiskit.ipynb
+++ b/20250120/20250120_2_qiskit.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Qiskit入門\n",
+    "# Qiskit入門 解答例\n",
     "\n",
     "Kifumi Numata, IBM Quantum (Jan 20, 2025)"
    ]
@@ -25,6 +25,23 @@
    "outputs": [],
    "source": [
     "#!pip install qiskit qiskit-ibm-runtime qiskit-aer qiskit[visualization]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "qBraid で行う場合は、右上の「Python 3[Default]」をクリックして「Python 3[QDC24]」を選択し、次のセルの「#」を削除して実行したあと、上部の「Kernel」→「Restart Kernel...」からカーネルをリスタートしてください。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install pylatexenc\n",
+    "#!sudo apt install graphviz --yes"
    ]
   },
   {
@@ -454,7 +471,7 @@
     "# シミュレーターで実験\n",
     "backend = AerSimulator()\n",
     "sampler = SamplerV2(backend)\n",
-    "job = sampler.run([qc], shots=1024)\n",
+    "job = sampler.run([qc])\n",
     "result = job.result()\n",
     "\n",
     "#  測定された回数を表示\n",
