--- a/20250120/solution/20250120_3_qml_solution.ipynb
+++ b/20250120/solution/20250120_3_qml_solution.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 量子機械学習\n",
+    "# 量子機械学習：解答例\n",
     "\n",
     "Kifumi Numata, IBM Quantum (Jan 20, 2025)"
    ]
@@ -24,6 +24,23 @@
    "outputs": [],
    "source": [
     "#!pip install qiskit qiskit-ibm-runtime qiskit-aer qiskit[visualization]\n",
+    "#!pip install -U scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "qBraid で行う場合は、右上の「Python 3[Default]」をクリックして「Python 3[QDC24]」を選択し、次のセルの「#」を削除して実行したあと、上部の「Kernel」→「Restart Kernel...」からカーネルをリスタートしてください。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install pylatexenc\n",
     "#!pip install -U scikit-learn"
    ]
   },
