--- a/2025/TUS/20250616_TUS.ipynb
+++ b/2025/TUS/20250616_TUS.ipynb
@@ -24,13 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Google Colabで実行している方は以下の # を取り除いてインストールを実行してくださう\n",
-    "\n",
-    "#%pip install qiskit_aer\n",
-    "#%pip install qiskit_ibm_runtime\n",
-    "#%pip install matplotlib\n",
-    "#%pip install pylatexenc\n",
-    "#%pip install qiskit-transpiler-service"
+    "# Google Colabを使っている場合、次の行の # を外して実行してください\n",
+    "#!pip install qiskit[visualization] qiskit-aer qiskit-ibm-runtime "
    ]
   },
   {
@@ -814,20 +809,9 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# 実機で実行する場合：\n",
-    "# https://quantum.ibm.com/account から API token をコピーして、<IBM Quantum API key>に貼り付けます。\n",
-    "QiskitRuntimeService(channel='ibm_quantum', instance='ibm-q/open/main', token='<IBM Quantum API key>')\n",
+    "# https://quantum.ibm.com から API token をコピーして、<IBM Quantum API key>に貼り付けます。\n",
+    "service = QiskitRuntimeService(channel='ibm_quantum', instance='ibm-q/open/main', token='<IBM Quantum API key>')\n",
     "\n",
-    "service = QiskitRuntimeService()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
     "service.backends()"
    ]
   },
