--- a/2025/TUS/20250616_TUS.ipynb
+++ b/2025/TUS/20250616_TUS.ipynb
@@ -949,6 +949,34 @@
     "import qiskit\n",
     "qiskit.__version__"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## さらに学びたい方へ\n",
+    "\n",
+    "### 1. NICT Quantum Camp\n",
+    "2025年度 量子ネイティブ人材育成プログラム「NICT Quantum Camp」参加者募集中です。\n",
+    "- https://nqc.nict.go.jp/news/250609_01.html\n",
+    "- 体験型と探索型と2種類あります。\n",
+    "- 期間：8月から3月まで。基本的に土日開催です。\n",
+    "- 申し込み：〜7/7(月)17時まで\n",
+    "- チラシ：https://nqc.nict.go.jp/news/docs/NICTQuantumCamp2025_flyer.pdf\n",
+    "\n",
+    "### 2. IBM Quantum Learning\n",
+    "最新の学習コンテンツが掲載されています（英語です）：https://learning.quantum.ibm.com/\n",
+    "\n",
+    "### 3. Quantum Tokyo\n",
+    "日本国内の量子コンピューター勉強会です：https://quantum-tokyo.github.io/introduction/intro.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
